--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/f30fac2c61.js" crossorigin="anonymous"></script>
     <link
         href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Catamaran:wght@200&family=Courgette&family=Edu+TAS+Beginner:wght@700&family=Lato:wght@300;900&family=Mukta:wght@700&family=Mulish:wght@300&family=Open+Sans&family=PT+Sans:ital,wght@1,700&family=Poppins:wght@300&family=Raleway:wght@100&family=Roboto&family=Roboto+Condensed:wght@700&family=Roboto+Slab&display=swap"
@@ -20,7 +20,7 @@
     <div class="container">
         <nav>
             <div class="logo">
-                <h1>Trends</h1>
+                <h1>RentVine</h1>
             </div>
             <ul>
                 <li>
@@ -42,7 +42,7 @@
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi</p>
                 <button>Explore</button>
             </div>
-            <img src="m3.png" alt="">
+            <img src="./images/m3.png" alt="">
         </div>
 
 
@@ -53,7 +53,7 @@
             </div>
             <div class="card" id="item1">
                 <div class="crd">
-                    <img src="srt1.webp" alt="" onclick="showCard(this)">
+                    <img src="./images/srt1.webp" alt="" onclick="showCard(this)">
                     <div class="txt">
                         <h3>Cutton Trending Shirt's</h3>
                         <i class="fa-solid fa-star"></i>
@@ -65,7 +65,7 @@
                     </div>
                 </div>
                 <div class="crd">
-                    <img src="srt2.webp" alt="" onclick="showCard(this)">
+                    <img src="./images/srt2.webp" alt="" onclick="showCard(this)">
                     <div class="txt">
                         <h3>Cutton Trending Shirt's</h3>
                         <i class="fa-solid fa-star"></i>
@@ -77,7 +77,7 @@
                     </div>
                 </div>
                 <div class="crd">
-                    <img src="srt6.webp" alt="" onclick="showCard(this)">
+                    <img src="./images/srt6.webp" alt="" onclick="showCard(this)">
                     <div class="txt">
                         <h3>Cutton Trending Shirt's</h3>
                         <i class="fa-solid fa-star"></i>
@@ -99,7 +99,7 @@
 
             <div class="card">
                 <div class="crd">
-                    <img src="wn6.webp" alt="" onclick="showCard(this) ">
+                    <img src="./images/wn6.webp" alt="" onclick="showCard(this) ">
                     <div class="txt">
                         <h3>Trending Girl Tops</h3>
                         <i class="fa-solid fa-star"></i>
@@ -111,7 +111,7 @@
                     </div>
                 </div>
                 <div class="crd">
-                    <img src="wn4.webp" alt="" onclick="showCard(this) ">
+                    <img src="./images/wn4.webp" alt="" onclick="showCard(this) ">
                     <div class="txt">
                         <h3>Trending Girl Tops</h3>
                         <i class="fa-solid fa-star"></i>
@@ -123,7 +123,7 @@
                     </div>
                 </div>
                 <div class="crd">
-                    <img src="wn5.webp" alt="" onclick="showCard(this)">
+                    <img src="./images/wn5.webp" alt="" onclick="showCard(this)">
                     <div class="txt">
                         <h3>Trending Girl Tops</h3>
                         <i class="fa-solid fa-star"></i>
@@ -172,7 +172,7 @@
 
             <div class="trd">
                 <div class="trending">
-                    <img src="tr1.webp" alt="">
+                    <img src="./images/tr1.webp" alt="">
                     <div class="txt">
                         <h3>Trending Girl Cloths</h3><br>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem, animi expedita?</p><br>
@@ -180,7 +180,7 @@
                     </div>
                 </div>
                 <div class="trending">
-                    <img src="tr3.webp" alt="">
+                    <img src="./images/tr3.webp" alt="">
                     <div class="txt">
                         <h3>Trending Boys Cloths</h3> <br>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem, animi expedita?</p><br>
@@ -194,18 +194,18 @@
         <div class="about">
             <div class="aboutText">
                 <h1>#Know Us...</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, iure eos!</p>
+                <p>Discover the ease of renting with RentVine</p>
             </div>
 
             <div class="aboutus">
-                <img src="lap.png" alt="">
+                <img src="./images/lap.png" alt="">
                 <div class="dumiText">
-                    <h1>Who we are ?</h1>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing Dolorum corrupti consequuntur sunt ipsam
-                        aperiam vel magni sequi eos sit amet consectetur adipisicing Dolorum corrupti consequuntur sunt
-                        ipsam aperiam vel magni sequi eos atque nam maxime dolorem fuga, rem eum iure quidem! Illo
-                        corporis, asperiores ipsum excepturi voluptates necessitatibus consectetur odit omnis hic
-                        praesentium autem, officiis dignissimos assumenda saepe.</p>
+                    <h1>Our Mission</h1>
+                    <p>Our mission is to promote sustainability, encourage  a circular economy by reducing waste and promoting the reuse of quality items.
+                       Our website supports flexibility and offers diverse rental options to fit various needs, from short-term projects to temporary living situations.
+                       And because we really care about your wallet... the longer you rent the more you save! So go on, find something you love.
+                       We support dreams that may be out of reach by offering affordable access to items others no longer need.
+                    </p>
                 </div>
             </div>
         </div>
@@ -214,24 +214,22 @@
 
         <div class="contact">
             <div class="contactBanner">
-                <h1>#Let's Connect</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, iure eos!</p>
-
+                <h1>Contact Us</h1>
+                <p>Our complaint resolution process is designed to ensure fast and efficient resolution of your issue at the first point of contact. While we always aim to provide you with awesome customer service, we understand that there will be times when you may wish to express dissatisfaction with our products, services, staff or policies.</p>
             </div>
             <div class="connect">
                 <div class="connectText">
                     <h1>Visit Our Office or Contact <br> Us Today</h1>
-                    <p>Address : Dablin Park, England, New york</p>
-                    <p>Contact : dumiemail@gmail.com</p>
-                    <p>Number : 999999000011</p>
+                    <p>Address : Contai, Purba Medinipur, West Bengal</p>
+                    <p>Contact : eshitamandal@gmail.com</p>
+                    <p>Number : 9988775500</p>
                 </div>
-                <img src="map.PNG" alt="">
+                <img src="./map.jpg" alt="">
             </div>
 
             <div class="form">
                 <h1>Connect with Us. Fill Form</h1>
-                <input type="text" placeholder="Enter Your FirstName"> <br>
-                <input type="text" placeholder="Enter Your LsstName"> <br>
+                <input type="text" placeholder="Enter Your Name"> <br>
                 <input type="text" placeholder="Enter Your Email"><br>
                 <input type="text" placeholder="Enter Your Number"><br>
                 <input type="text" placeholder="Enter Your Address"><br>
@@ -242,8 +240,7 @@
 
         <div class="letter">
             <div class="sign">
-                <h2>Sign Up for NewsLetter</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur Special Offer</p>
+                <h2>Sign Up</h2>
             </div>
             <div class="inp">
                 <input type="text" placeholder="Enter Email Address">
@@ -263,16 +260,15 @@
             </div>
             <div class="Ftext">
                 <h3>About US</h3>
-                <p>Adrress : Lorem ipsum dolor sit amet,<br> consectetur adipisicing <br> Perferendis, excepturi alias.
+                <p>Adrress : Vill-Serpur Etowaribar<br> P.O+P.S-Contai <br> Purba Medinipur, West Bengal
                 </p>
                 <p>Service</p>
                 <p>Customer</p>
-                <p>Satisfation</p>
 
             </div>
             <div class="Ftext">
                 <h3>Contect</h3>
-                <p>9989003229</p>
+                <p>9988775500</p>
                 <p>Customer</p>
                 <p>Comming up..</p>
                 <p>New Arrival</p>
@@ -282,7 +278,7 @@
                 <h3>Trending</h3>
                 <p>Service</p>
                 <p>Customer</p>
-                <p>SHops</p>
+                <p>Shops</p>
                 <p></p>
 
             </div>
@@ -290,7 +286,7 @@
 
 
     </div>
-    <script src="index.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
