--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                     <p>Contact : eshitamandal@gmail.com</p>
                     <p>Number : 9988775500</p>
                 </div>
-                <img src="./map.jpg" alt="">
+                <img src="./images/map.jpg" alt="">
             </div>
 
             <div class="form">
