--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>RentVine</title>
+
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/f30fac2c61.js" crossorigin="anonymous"></script>
     <link
@@ -21,12 +22,12 @@
         <nav>
             <div class="logo">
                 <h1>RentVine</h1>
+                <p>Your go-to place for renting everyday items.</p>
             </div>
             <ul>
                 <li>
                     <a id="home" onclick="home()">Home</a>
                     <a id="shop" onclick="shop()">Shops</a>
-                    <a id="blog" onclick="blog()">Blog</a>
                     <a id="about" onclick=" about()">About</a>
                     <a id="contact" onclick="contact()">Contact</a>
                     <i onclick="addItem()" class="fa-sharp fa-solid fa-cart-shopping"></i>
@@ -36,55 +37,38 @@
 
         <div class="mainPage">
             <div class="text">
-                <h2>Trends...</h2>
-                <h1 class="heads">Super Value Deals</h1>
-                <h1>On All Products</h1>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi</p>
+                <h2>Flow with Trends...</h2>
+                <h1 class="heads">Redefine Your World</h1>
+                <p>Discover useful products, embrace your workspace, and transform the way you live, work, and play.</p>
                 <button>Explore</button>
             </div>
-            <img src="./images/m3.png" alt="">
         </div>
 
 
 
-        <div class="cardMen">
+        <div class="category1">
             <div class="head">
-                <h1>Trends <span>Men's Wear</span></h1>
+                <h1>Trending</h1>
             </div>
             <div class="card" id="item1">
                 <div class="crd">
-                    <img src="./images/srt1.webp" alt="" onclick="showCard(this)">
+                    <img src="./images/furniters.jpeg" alt="">
                     <div class="txt">
-                        <h3>Cutton Trending Shirt's</h3>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star-half-stroke"></i><br>
-                        <button onclick="add(item1)">Add To Cart</button>
-                    </div>
-                </div>
-                <div class="crd">
-                    <img src="./images/srt2.webp" alt="" onclick="showCard(this)">
-                    <div class="txt">
-                        <h3>Cutton Trending Shirt's</h3>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star-half-stroke"></i><br>
+                        <h3>Furniturs</h3>
                         <button>Add To Cart</button>
                     </div>
                 </div>
                 <div class="crd">
-                    <img src="./images/srt6.webp" alt="" onclick="showCard(this)">
+                    <img src="./images/Kitchen Appliences.jpeg" alt="">
                     <div class="txt">
-                        <h3>Cutton Trending Shirt's</h3>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star-half-stroke"></i><br>
+                        <h3>Kitchen Appliences</h3>
+                        <button>Add To Cart</button>
+                    </div>
+                </div>
+                <div class="crd">
+                    <img src="./images/Home Appliences.jpeg" alt="">
+                    <div class="txt">
+                        <h3>Home Appliences</h3>
                         <button>Add To Cart</button>
                     </div>
                 </div>
@@ -92,104 +76,36 @@
         </div>
 
 
-        <div class="cardgirl">
+        <div class="category2">
             <div class="head">
-                <h1>Trends <span>Women's Wear</span></h1>
+                <h1>Other Catagories</h1>
             </div>
 
             <div class="card">
                 <div class="crd">
-                    <img src="./images/wn6.webp" alt="" onclick="showCard(this) ">
+                    <img src="./images/book.jpeg" alt="">
                     <div class="txt">
-                        <h3>Trending Girl Tops</h3>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star-half-stroke"></i><br>
+                        <h3>Books</h3>
                         <button>Add To Cart</button>
                     </div>
                 </div>
                 <div class="crd">
-                    <img src="./images/wn4.webp" alt="" onclick="showCard(this) ">
+                    <img src="./images/Musical_Instrument.jpeg" alt="">
                     <div class="txt">
-                        <h3>Trending Girl Tops</h3>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star-half-stroke"></i><br>
+                        <h3>Musical Instruments</h3>
                         <button>Add To Cart</button>
                     </div>
                 </div>
                 <div class="crd">
-                    <img src="./images/wn5.webp" alt="" onclick="showCard(this)">
+                    <img src="./images/fitness_euipment.jpeg" alt="">
                     <div class="txt">
-                        <h3>Trending Girl Tops</h3>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star-half-stroke"></i><br>
+                        <h3>Fitness Equipments</h3>
                         <button>Add To Cart</button>
                     </div>
                 </div>
             </div>
         </div>
 
-        <!--Full cart  -->
-        <div class="fullPage">
-            <img id="cartImg" src=" " alt="">
-            <div class="cartText">
-                <h1>Trends Offer : Trending Shop <br> Now</h1>
-                <h2>Special Price</h2>
-                <h2>$11</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing.</p>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing.</p>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing.</p>
-                <div class="btn">
-                    <button>Buy Now</button>
-                    <button onclick="addToCart()">Add To Cart</button>
-
-                </div>
-                <div class="btns">
-                    <button class="relode" onclick="location.reload()">Back </button>
-                </div>
-            </div>
-            
-
-        </div>
-
-        <!-- add to cart -->
-        <div class="addCart">
-
-        </div>
-
-        <div class="blogContent">
-            <div class="head">
-                <h1>Trends Top <span>Blog's</span></h1>
-            </div>
-
-            <div class="trd">
-                <div class="trending">
-                    <img src="./images/tr1.webp" alt="">
-                    <div class="txt">
-                        <h3>Trending Girl Cloths</h3><br>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem, animi expedita?</p><br>
-                        <a href="https://influencermarketinghub.com/best-fashion-blogs/">Read More</a>
-                    </div>
-                </div>
-                <div class="trending">
-                    <img src="./images/tr3.webp" alt="">
-                    <div class="txt">
-                        <h3>Trending Boys Cloths</h3> <br>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem, animi expedita?</p><br>
-                        <a href="https://www.apetogentleman.com/">Read More</a>
-                    </div>
-                </div>
-
-            </div>
-        </div>
 
         <div class="about">
             <div class="aboutText">
