--- a/index.html
+++ b/index.html
@@ -54,22 +54,22 @@
                 <div class="crd">
                     <img src="./images/furniters.jpeg" alt="">
                     <div class="txt">
-                        <h3>Furniturs</h3>
-                        <button>Add To Cart</button>
+                        <h3>Furniture</h3>
+                        <button>See more...</button>
                     </div>
                 </div>
                 <div class="crd">
                     <img src="./images/Kitchen Appliences.jpeg" alt="">
                     <div class="txt">
-                        <h3>Kitchen Appliences</h3>
-                        <button>Add To Cart</button>
+                        <h3>Kitchen Appliances</h3>
+                        <button>See more...</button>
                     </div>
                 </div>
                 <div class="crd">
                     <img src="./images/Home Appliences.jpeg" alt="">
                     <div class="txt">
-                        <h3>Home Appliences</h3>
-                        <button>Add To Cart</button>
+                        <h3>Home Appliances</h3>
+                        <button>See more...</button>
                     </div>
                 </div>
             </div>
@@ -86,21 +86,21 @@
                     <img src="./images/book.jpeg" alt="">
                     <div class="txt">
                         <h3>Books</h3>
-                        <button>Add To Cart</button>
+                        <button>See more...</button>
                     </div>
                 </div>
                 <div class="crd">
                     <img src="./images/Musical_Instrument.jpeg" alt="">
                     <div class="txt">
                         <h3>Musical Instruments</h3>
-                        <button>Add To Cart</button>
+                        <button>See more...</button>
                     </div>
                 </div>
                 <div class="crd">
                     <img src="./images/fitness_euipment.jpeg" alt="">
                     <div class="txt">
                         <h3>Fitness Equipments</h3>
-                        <button>Add To Cart</button>
+                        <button>See more...</button>
                     </div>
                 </div>
             </div>
@@ -109,7 +109,7 @@
 
         <div class="about">
             <div class="aboutText">
-                <h1>#Know Us...</h1>
+                <h1>Know Us...</h1>
                 <p>Discover the ease of renting with RentVine</p>
             </div>
 
